--- a/pages/add-choice/add-choice.wxss
+++ b/pages/add-choice/add-choice.wxss
@@ -34,8 +34,11 @@
   border-radius: 50rpx;
   padding: 4rpx 30rpx;
   min-height: 40rpx;
-  margin-left: 40rpx;
+  margin: 0 20rpx 0 15rpx;
   box-shadow: 0 0 10rpx #d6d2d2 inset;
+}
+.header-sure{
+  width: 50rpx;
 }
 .gxl-body{
   box-sizing: border-box;
@@ -44,6 +47,7 @@
   padding: 0 30rpx;
 }
 .choice-item{
+  position: relative;
   width: 100%;
   height: 80rpx;
   display: flex;
@@ -53,6 +57,7 @@
   box-shadow: 0 0 10rpx #d6d2d2 inset;
   border-radius: 80rpx;
   padding: 4rpx 30rpx;
+  margin-right: 80rpx;
 }
 .choice-item input, .choice-item text{
   flex: 1;
@@ -67,4 +72,10 @@
   height: 80rpx;
   line-height: 90rpx;
   text-align: center;
+}
+.edit-choice{
+  position: absolute;
+  right: 0;
+  width: 50rpx;
+  margin-left: 1em;
 }
