--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -6,9 +6,9 @@
   </view>
   <view class="gxl-blank" style="height: {{DEFAULT_HEADER_HEIGHT + STATUS_BAR_HEIGHT}}px"></view>
   <view class="gxl-body" style="min-height: {{BODY_HEIGHT}}px">
-    <swiper-out>
+    <swiper-out wx:for="{{choiceList}}">
       <view class="choice-item">
-        1. 你好啊你好啊你好
+        {{index + 1}}. {{item.title}}
         <text class="show-choice" bindtap="showResult">Choose For Me</text>
       </view>
       <view class="choice-delete" bindtap="deleteChoice">
@@ -18,31 +18,7 @@
         <image src="../../image/share-a.png" mode="widthFix"></image>
       </button>
     </swiper-out>
-    <swiper-out>
-      <view class="choice-item">
-        1. 你好啊你好啊你好
-        <text class="show-choice">Choose For Me</text>
-      </view>
-      <view class="choice-delete">
-        <image src="../../image/del-a.png" mode="widthFix"></image>
-      </view>
-      <view class="choice-share">
-        <image src="../../image/share-a.png" mode="widthFix"></image>
-      </view>
-    </swiper-out>
-    <swiper-out>
-      <view class="choice-item">
-        1. 你好啊你好啊你好
-        <text class="show-choice">Choose For Me</text>
-      </view>
-      <view class="choice-delete">
-        <image src="../../image/del-a.png" mode="widthFix"></image>
-      </view>
-      <view class="choice-share">
-        <image src="../../image/share-a.png" mode="widthFix"></image>
-      </view>
-    </swiper-out>
   </view>
   <!-- <button open-type='getUserInfo' bindgetuserinfo="bindGetUserInfo" wx:if="{{!isLogin}}">授权登录</button>
-  <button open-type='share' wx:if="{{isLogin}}"></button> -->
+  <button open-type='share' wx:if="{{isLogin}}">授权登录</button> -->
 </view>
