初步版本制作，只是实现对应的添加与帮选功能

--- a/components/swiper-out/swiper-out.wxml
+++ b/components/swiper-out/swiper-out.wxml
@@ -1,3 +1,3 @@
-<view class="gxl-swiper {{choiceMove}}" bindtouchstart="swiperTouchStart" bindtouchmove="swiperTouchMove" bindtouchend="swiperTouchEnd">
-  <slot></slot>
+<view class="gxl-swiper {{choiceMove}} {{show ? '' : 'gxl-swiper-del'}}" wx:if="{{showSwiper}}" bindtouchstart="swiperTouchStart" bindtouchmove="swiperTouchMove" bindtouchend="swiperTouchEnd"  bindanimationend="animationEnd">
+  <slot bind:tap="swipertap"></slot>
 </view>
