--- a/components/user-toast/user-toast.wxss
+++ b/components/user-toast/user-toast.wxss
@@ -1,11 +1,16 @@
 .user-toast{
-  width: 100%;
-  height: 100%;
   position: fixed;
-  background: rgba(155, 155, 155, .7);
+  background: rgba(0, 0, 0, .7);
   top: 0;
+  bottom: 0;
+  right: 0;
   left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 100;
+  perspective: 1500;
+  -webkit-perspective: 1500;
+  perspective-origin: center 150%;
+  -webkit-perspective-origin: center 150%;
 }
