--- a/pages/add-choice/add-choice.wxss
+++ b/pages/add-choice/add-choice.wxss
@@ -22,7 +22,7 @@
   display: block;
   width: 50rpx;
   height: 50rpx;
-  padding: 0 25rpx;
+  padding:20rpx 25rpx;
 }
 .header-back{
   background: url('https://gxlself.com/images/back-a.png') center no-repeat;
