--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,20 +1,20 @@
 <view class="page">
   <view class='gxl-header' style='padding-top: {{STATUS_BAR_HEIGHT}}px;height:{{DEFAULT_HEADER_HEIGHT}}px;'>
     <text class="header-icon header-share" bindtap="goAddChoice"></text>
-    <text class="header-title">盲选</text>
+    <text class="header-title">随心所选-帮你选</text>
     <text class="header-icon"></text>
   </view>
   <view class="gxl-blank" style="height: {{DEFAULT_HEADER_HEIGHT + STATUS_BAR_HEIGHT}}px"></view>
   <view class="gxl-body" style="min-height: {{BODY_HEIGHT}}px">
-    <swiper-out wx:for="{{choiceList}}">
+    <swiper-out wx:for="{{choiceList}}" bind:swiperHide="swiperHide" data-index="{{index}}" tapType="{{tapType}}" show="{{item.show}}">
       <view class="choice-item">
         {{index + 1}}. {{item.title}}
-        <text class="show-choice" bindtap="showResult">Choose For Me</text>
+        <text class="show-choice" data-index="{{index}}" data-id="{{item._id}}" bindtap="showResult" bind:tapCurrentSwiper="showResult">Choose For Me</text>
       </view>
-      <view class="choice-delete" bindtap="deleteChoice">
+      <view class="choice-delete" bindtap="deleteChoice" data-index="{{index}}" data-id="{{item._id}}">
         <image src="../../image/del-a.png" mode="widthFix"></image>
       </view>
-      <button open-type="share" class="choice-share" bindtap="setDisabled">
+      <button open-type="share" class="choice-share" bindtap="setDisabled" data-openid="{{item._openid}}" data-index="{{index}}" data-id="{{item._id}}">
         <image src="../../image/share-a.png" mode="widthFix"></image>
       </button>
     </swiper-out>
@@ -29,12 +29,17 @@
         <button class="gxl-modal-weixin" open-type='getUserInfo' bindgetuserinfo="bindGetUserInfo">
           <image src="../../image/weixin-b.png" mode="widthFix"></image>
         </button>
-        <view class="gxl-modal-weixin">
+        <!-- <view class="gxl-modal-weixin">
           <image src="../../image/advance.png" mode="widthFix"></image>
-        </view>
+        </view> -->
       </view>
     </view>
   </view>
-  <!-- <button open-type='getUserInfo' bindgetuserinfo="bindGetUserInfo" wx:if="{{!isLogin}}">授权登录</button>
-  <button open-type='share' wx:if="{{isLogin}}">授权登录</button> -->
+  <user-toast bind:taptoast="tapToast" wx:if="{{showResult}}">
+    <view class="user-result" wx:if="{{showResult}}" catch:tap="false" bindanimationend="animationEnd">
+      <view class="result-title">{{choiceObject.title}}</view>
+      <view class="result-choice">{{choiceObject.choose.content}}</view>
+      <view class="result-sure" bindtap="tapToast">确定</view>
+    </view>
+  </user-toast>
 </view>
