--- a/app.wxss
+++ b/app.wxss
@@ -87,3 +87,56 @@ view {
   content: "\e63f";
 }
 
+.gxl-modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba( 0, 0, 0, .7);
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.gxl-modal-box{
+  width: 600rpx;
+  background: #ffffff;
+  border-radius: 14rpx;
+  box-shadow: 0 0 20rpx #2a2a2a;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 30rpx 0;
+}
+.gxl-modal-ava{
+  max-width: 150rpx;
+  max-height: 150rpx;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: 0 0 10rpx #7a7575;
+}
+.gxl-modal-login{
+  width: 70%;
+  border: 1rpx solid #ddd2d2;
+  margin: 10rpx 0 0 0;
+  padding: 30rpx 20rpx;
+  border-radius: 8rpx;
+  display: flex;
+  justify-content: space-around;
+}
+.gxl-modal-hint{
+  font-size: 24rpx;
+  margin-top: 30rpx;
+}
+.gxl-modal-weixin{
+  width: 80rpx;
+  height: 80rpx;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.gxl-modal-weixin image{
+  width: 100%;
+  max-width: 100%;
+}
